# m2m

./: .dockerignore  .gitignore  .readthedocs.yaml  Dockerfile  README.md  a2t_requirements.txt  environment.yml  package.txt  pyproject.toml  requirements.txt  setup.py  singularity.def
.github/workflows/: docker-image.yml
.streamlit/: config.toml
allen2tract/: allensdk_utils.py  control.py  streamlines.py  tract.py  transform.py  util.py  version.py
app/: m2m_main_page.py
docs/: PIRtoRAS.md  api.rst  conf.py  index.rst  installation.rst  module.rst  requirements.txt  scripts.rst  usage.rst
m2m/: allensdk_utils.py  control.py  data.py  streamlines.py  tract.py  transform.py  version.py
module/: tract.py  transform.py  util.py  version.py
scripts/: allen2avgt_import_proj_density.py  allen_compute_transform_matrices.py  allen_compute_transform_matrix.py  allen_crossing_finder.py  allen_import_proj_density.py  allen_import_tract.py  allen_template_register.py  allen_template_transform.py  allen_tract_filter.py  allen_tract_register.py  allen_tract_transform.py  m2m_compute_transform_matrix.py  m2m_crossing_finder.py  m2m_download_annotation.py  m2m_download_template.py  m2m_experiments_finder.py  m2m_import_proj_density.py  m2m_import_tract.py  m2m_tract_filter.py  m2m_transform_tractogram.py
src/: allen2avgt_import_proj_density.py  allen2mi-brain.ipynb  allen2mi-brain_template.ipynb  antspyx_tuto.ipynb  essais.ipynb  filtrage_experiences.ipynb  test.ipynb  test_script.ipynb
transformations_allen2avgt/: affine.txt
utils/: control.py  transform.py  util.py
(+43 files in other folders)
