[tool.poetry]
name = "stage-2022-mahdi"
version = "0.1.0"
description = "Allen2Tract, stage UQAM/Bordeaux (E2022)"
authors = ["Joël Lefebvre <lefebvre.joel@uqam.ca>"]

[tool.poetry.dependencies]
python = "^3.9"
allensdk = "^2.13.4"
antspyx = "^0.3.2"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
